src/objects/ADvendio__Delivery_Report_Setting__c.object
<CustomObject>
    <fields>
        <fullName>ADvendio__Day__c</fullName>
        <description>Choose the days on which the complete monthly delivery report is to be requested from the ad server.</description>
        <inlineHelpText>Choose the days on which the complete monthly delivery report is to be requested from the ad server.</inlineHelpText>
        <label>Day</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__FailureNoteAdditionalLifetime__c</fullName>
        <inlineHelpText>Enter email addresses of additional recipients seperated by semicolon.</inlineHelpText>
        <label>Failure Note Additional (Lifetime)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ADvendio__FailureNoteAdditionalMonthly__c</fullName>
        <inlineHelpText>Enter email addresses of additional recipients seperated by semicolon.</inlineHelpText>
        <label>Failure Note Additional</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ADvendio__Failure_Note_Recipient_Lifetime__c</fullName>
        <description>Enter an e-mail address to receive failure notifications concerning lifetime requests of delivery reports.</description>
        <inlineHelpText>Enter an e-mail address to receive failure notifications concerning lifetime requests of delivery reports.</inlineHelpText>
        <label>Failure Note Recipient (Lifetime)</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ADvendio__Failure_Note_Recipient_Monthly__c</fullName>
        <description>Enter an e-mail address to receive failure notifications concerning monthly requests of delivery reports.</description>
        <inlineHelpText>Enter an e-mail address to receive failure notifications concerning monthly requests of delivery reports.</inlineHelpText>
        <label>Failure Note Recipient</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ADvendio__Job_ID_Lifetime__c</fullName>
        <description>This field will be filled automatically by the ad server interface.</description>
        <inlineHelpText>This field will be filled automatically by the ad server interface.</inlineHelpText>
        <label>Job ID Lifetime</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__Job_ID_Monthly__c</fullName>
        <description>This field will be filled automatically by the ad server interface.</description>
        <inlineHelpText>This field will be filled automatically by the ad server interface.</inlineHelpText>
        <label>Job ID Monthly</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__Password__c</fullName>
        <description>Enter the salesforce password which is necessary to log into the script to enter delivery report data.</description>
        <inlineHelpText>Enter the salesforce password which is necessary to log into the script to enter delivery report data.</inlineHelpText>
        <label>Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__Send_Success_Note_Lifetime__c</fullName>
        <defaultValue>false</defaultValue>
        <description>With this checkbox you can define whether a success note for lifetime requests of delivery reports shall be sent.</description>
        <inlineHelpText>With this checkbox you can define whether a success note for lifetime requests of delivery reports shall be sent.</inlineHelpText>
        <label>Send Success Note (Lifetime)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__Send_Success_Note_Monthly__c</fullName>
        <defaultValue>false</defaultValue>
        <description>With this checkbox you can define whether a success note for monthly requests of delivery reports shall be sent.</description>
        <inlineHelpText>With this checkbox you can define whether a success note for monthly requests of delivery reports shall be sent.</inlineHelpText>
        <label>Send Success Note</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__SuccessNoteAdditionalLifetime__c</fullName>
        <inlineHelpText>Enter email addresses of additional recipients seperated by semicolon.</inlineHelpText>
        <label>Success Note Additional (Lifetime)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ADvendio__SuccessNoteAdditionalMonthly__c</fullName>
        <inlineHelpText>Enter email addresses of additional recipients seperated by semicolon.</inlineHelpText>
        <label>Success Note Additional</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ADvendio__Success_Note_Recipient_Lifetime__c</fullName>
        <description>Enter an e-mail address to receive success notifications concerning lifetime requests of delivery reports.</description>
        <inlineHelpText>Enter an e-mail address to receive success notifications concerning lifetime requests of delivery reports.</inlineHelpText>
        <label>Success Note Recipient (Lifetime)</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ADvendio__Success_Note_Recipient_Monthly__c</fullName>
        <description>Enter an e-mail address to receive success notifications concerning monthly requests of delivery reports.</description>
        <inlineHelpText>Enter an e-mail address to receive success notifications concerning monthly requests of delivery reports.</inlineHelpText>
        <label>Success Note Recipient</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ADvendio__Time_Lifetime__c</fullName>
        <description>Choose the time of day when the lifetime request of delivery reports shall be operated.</description>
        <inlineHelpText>Choose the time of day when the lifetime request of delivery reports shall be operated.</inlineHelpText>
        <label>Time (h) (Lifetime)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>00:00</fullName>
                </value>
                <value>
                    <fullName>01:00</fullName>
                </value>
                <value>
                    <fullName>02:00</fullName>
                </value>
                <value>
                    <fullName>03:00</fullName>
                </value>
                <value>
                    <fullName>04:00</fullName>
                </value>
                <value>
                    <fullName>05:00</fullName>
                </value>
                <value>
                    <fullName>06:00</fullName>
                </value>
                <value>
                    <fullName>07:00</fullName>
                </value>
                <value>
                    <fullName>08:00</fullName>
                </value>
                <value>
                    <fullName>09:00</fullName>
                </value>
                <value>
                    <fullName>10:00</fullName>
                </value>
                <value>
                    <fullName>11:00</fullName>
                </value>
                <value>
                    <fullName>12:00</fullName>
                </value>
                <value>
                    <fullName>13:00</fullName>
                </value>
                <value>
                    <fullName>14:00</fullName>
                </value>
                <value>
                    <fullName>15:00</fullName>
                </value>
                <value>
                    <fullName>16:00</fullName>
                </value>
                <value>
                    <fullName>17:00</fullName>
                </value>
                <value>
                    <fullName>18:00</fullName>
                </value>
                <value>
                    <fullName>19:00</fullName>
                </value>
                <value>
                    <fullName>20:00</fullName>
                </value>
                <value>
                    <fullName>21:00</fullName>
                </value>
                <value>
                    <fullName>22:00</fullName>
                </value>
                <value>
                    <fullName>23:00</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__Time_h_Monthly__c</fullName>
        <description>Choose the time of day when the monthly request of delivery reports shall be operated.</description>
        <inlineHelpText>Choose the time of day when the monthly request of delivery reports shall be operated.</inlineHelpText>
        <label>Time (h)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>00:00</fullName>
                </value>
                <value>
                    <fullName>01:00</fullName>
                </value>
                <value>
                    <fullName>02:00</fullName>
                </value>
                <value>
                    <fullName>03:00</fullName>
                </value>
                <value>
                    <fullName>04:00</fullName>
                </value>
                <value>
                    <fullName>05:00</fullName>
                </value>
                <value>
                    <fullName>06:00</fullName>
                </value>
                <value>
                    <fullName>07:00</fullName>
                </value>
                <value>
                    <fullName>08:00</fullName>
                </value>
                <value>
                    <fullName>09:00</fullName>
                </value>
                <value>
                    <fullName>10:00</fullName>
                </value>
                <value>
                    <fullName>11:00</fullName>
                </value>
                <value>
                    <fullName>12:00</fullName>
                </value>
                <value>
                    <fullName>13:00</fullName>
                </value>
                <value>
                    <fullName>14:00</fullName>
                </value>
                <value>
                    <fullName>15:00</fullName>
                </value>
                <value>
                    <fullName>16:00</fullName>
                </value>
                <value>
                    <fullName>17:00</fullName>
                </value>
                <value>
                    <fullName>18:00</fullName>
                </value>
                <value>
                    <fullName>19:00</fullName>
                </value>
                <value>
                    <fullName>20:00</fullName>
                </value>
                <value>
                    <fullName>21:00</fullName>
                </value>
                <value>
                    <fullName>22:00</fullName>
                </value>
                <value>
                    <fullName>23:00</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__Token__c</fullName>
        <description>Enter the salesforce security token which is necessary to log into the script to enter delivery report data.</description>
        <inlineHelpText>Enter the salesforce security token which is necessary to log into the script to enter delivery report data.</inlineHelpText>
        <label>Security Token</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__UpdateAdserverStatus__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked the import job updates the Adserver Campaign Item status while getting delivery data.</description>
        <inlineHelpText>If checked the import job updates the Adserver Campaign Item status while getting delivery data.</inlineHelpText>
        <label>Update Adserver Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__Username__c</fullName>
        <defaultValue>&apos;Login Username&apos;</defaultValue>
        <description>Enter the salesforce user name which is necessary to log into the script to enter delivery report data.</description>
        <inlineHelpText>Enter the salesforce user name which is necessary to log into the script to enter delivery report data.</inlineHelpText>
        <label>Salesforce Username</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_IdOld__c</fullName>
        <description>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</description>
        <inlineHelpText>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</inlineHelpText>
        <label>P7S1_IdOld</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Delivery Report Setting</label>
    <nameField>
        <label>Delivery Report Setting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Delivery Report Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>